--- a/contrib/copper-node/debian/changelog
+++ b/contrib/copper-node/debian/changelog
@@ -1,5 +1,5 @@
-copper-node (0.0.1) UNRELEASED; urgency=medium
+copper-node (0.0.1) unstable; urgency=medium
 
   * Initial release.
 
- -- Alexey Borzenkov <snaury@gmail.com>  Mon, 20 Jul 2015 18:06:56 +0300
+ -- Alexey Borzenkov <snaury@gmail.com>  Wed, 29 Jul 2015 12:14:26 +0300
