--- a/contrib/copper-node/debian/changelog
+++ b/contrib/copper-node/debian/changelog
@@ -1,3 +1,9 @@
+copper-node (0.0.2) unstable; urgency=medium
+
+  * Case-insensitive host matching and cpu setting in the config
+
+ -- Alexey Borzenkov <snaury@gmail.com>  Fri, 31 Jul 2015 13:27:10 +0300
+
 copper-node (0.0.1) unstable; urgency=medium
 
   * Initial release.
