--- a/contrib/copper-node/debian/changelog
+++ b/contrib/copper-node/debian/changelog
@@ -1,3 +1,9 @@
+copper-node (0.0.5) UNRELEASED; urgency=medium
+
+  * Log service-related messages for easier debugging
+
+ -- Alexey Borzenkov <snaury@gmail.com>  Mon, 03 Aug 2015 12:55:31 +0300
+
 copper-node (0.0.4) unstable; urgency=medium
 
   * Fix distance of remote services
