--- a/contrib/copper-node/debian/changelog
+++ b/contrib/copper-node/debian/changelog
@@ -1,6 +1,7 @@
 copper-node (0.0.5) UNRELEASED; urgency=medium
 
   * Log service-related messages for easier debugging
+  * Remove unused max_retries from the protocol
 
  -- Alexey Borzenkov <snaury@gmail.com>  Mon, 03 Aug 2015 12:55:31 +0300
 
