--- a/contrib/python-copper/debian/changelog
+++ b/contrib/python-copper/debian/changelog
@@ -1,3 +1,9 @@
+python-copper (0.0.3) UNRELEASED; urgency=medium
+
+  * Remove unused max_retries from the protocol
+
+ -- Alexey Borzenkov <snaury@gmail.com>  Mon, 03 Aug 2015 13:03:44 +0300
+
 python-copper (0.0.2) unstable; urgency=medium
 
   * Use python logging, auto unpublish on shutdown
