--- a/contrib/copper-node/debian/changelog
+++ b/contrib/copper-node/debian/changelog
@@ -1,3 +1,9 @@
+copper-node (0.0.6) unstable; urgency=medium
+
+  * Log route changes
+
+ -- Alexey Borzenkov <snaury@gmail.com>  Mon, 03 Aug 2015 14:18:32 +0300
+
 copper-node (0.0.5) unstable; urgency=medium
 
   * Log service-related messages for easier debugging
