--- a/contrib/copper-node/debian/changelog
+++ b/contrib/copper-node/debian/changelog
@@ -1,3 +1,9 @@
+copper-node (0.0.8) unstable; urgency=medium
+
+  * Make pprof available over http in copper-node
+
+ -- Alexey Borzenkov <snaury@gmail.com>  Mon, 03 Aug 2015 16:53:45 +0300
+
 copper-node (0.0.7) unstable; urgency=medium
 
   * When logging routes use %v, not %s
