--- a/contrib/copper-node/debian/changelog
+++ b/contrib/copper-node/debian/changelog
@@ -1,3 +1,9 @@
+copper-node (0.0.9) UNRELEASED; urgency=medium
+
+  * Switch server to sync.RWMutex, handle requests under RLock
+
+ -- Alexey Borzenkov <snaury@gmail.com>  Mon, 03 Aug 2015 19:13:43 +0300
+
 copper-node (0.0.8) unstable; urgency=medium
 
   * Make pprof available over http in copper-node
