--- a/contrib/copper-node/debian/changelog
+++ b/contrib/copper-node/debian/changelog
@@ -1,6 +1,7 @@
 copper-node (0.0.9) UNRELEASED; urgency=medium
 
   * Switch server to sync.RWMutex, handle requests under RLock
+  * Get rid of connection window concept
 
  -- Alexey Borzenkov <snaury@gmail.com>  Mon, 03 Aug 2015 19:13:43 +0300
 
