--- a/contrib/python-copper/debian/changelog
+++ b/contrib/python-copper/debian/changelog
@@ -1,3 +1,9 @@
+python-copper (0.0.4) UNRELEASED; urgency=medium
+
+  * Get rid of connection window concept
+
+ -- Alexey Borzenkov <snaury@gmail.com>  Mon, 03 Aug 2015 23:42:49 +0300
+
 python-copper (0.0.3) unstable; urgency=medium
 
   * Remove unused max_retries from the protocol
