--- a/contrib/python-copper/debian/changelog
+++ b/contrib/python-copper/debian/changelog
@@ -1,3 +1,9 @@
+python-copper (0.0.6) unstable; urgency=medium
+
+  * Improved buffering in Python code
+
+ -- Alexey Borzenkov <snaury@gmail.com>  Wed, 05 Aug 2015 15:01:42 +0300
+
 python-copper (0.0.5) unstable; urgency=medium
 
   * Get rid of connection window concept
