--- a/contrib/copper-node/debian/changelog
+++ b/contrib/copper-node/debian/changelog
@@ -1,11 +1,11 @@
-copper-node (0.0.9) UNRELEASED; urgency=medium
+copper-node (0.0.9) unstable; urgency=medium
 
   * Switch server to sync.RWMutex, handle requests under RLock
   * Get rid of connection window concept
   * Choose the least active endpoint in publications
   * Pass endpoints directly to waiters
 
- -- Alexey Borzenkov <snaury@gmail.com>  Mon, 03 Aug 2015 19:13:43 +0300
+ -- Alexey Borzenkov <snaury@gmail.com>  Wed, 05 Aug 2015 16:05:55 +0300
 
 copper-node (0.0.8) unstable; urgency=medium
 
