--- a/contrib/copper-node/debian/changelog
+++ b/contrib/copper-node/debian/changelog
@@ -1,6 +1,8 @@
 copper-node (0.0.10) UNRELEASED; urgency=medium
 
   * Detect when requests are cancelled and remove them from the queue
+  * Improved retry and cancellation logic
+  * Fix endpoint selection in http
 
  -- Alexey Borzenkov <snaury@gmail.com>  Wed, 05 Aug 2015 20:03:18 +0300
 
