--- a/contrib/copper-node/debian/changelog
+++ b/contrib/copper-node/debian/changelog
@@ -1,10 +1,10 @@
-copper-node (0.0.10) UNRELEASED; urgency=medium
+copper-node (0.0.10) unstable; urgency=medium
 
   * Detect when requests are cancelled and remove them from the queue
   * Improved retry and cancellation logic
   * Fix endpoint selection in http
 
- -- Alexey Borzenkov <snaury@gmail.com>  Wed, 05 Aug 2015 20:03:18 +0300
+ -- Alexey Borzenkov <snaury@gmail.com>  Mon, 10 Aug 2015 12:37:41 +0300
 
 copper-node (0.0.9) unstable; urgency=medium
 
