Fix wsgi support on gevent 1.1

--- a/contrib/python-copper/debian/changelog
+++ b/contrib/python-copper/debian/changelog
@@ -1,6 +1,7 @@
 python-copper (0.0.8) UNRELEASED; urgency=medium
 
   * Don't fail when shutdown succeeds too fast
+  * Fix wsgi support on gevent 1.1
 
  -- Alexey Borzenkov <snaury@gmail.com>  Fri, 20 Nov 2015 02:32:44 +0300
 
